concession-kiosk-policy-demo/network-policy/db/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
  namespace: concession-kiosk-db
spec:
  podSelector:
    matchLabels:
      role: mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          deployment: backend.concession-kiosk-app.svc.cluster.local
    ports:
    - protocol: TCP
      port: 27017
